# vsti2-imgui-sdl-test

./: .clang-format  CMakeLists.txt  README.md
cmake/: bin2h.cmake
src/: core.cpp  core.hpp  core_parameters.hpp  midi.hpp  vst.h  vst_entry_point.cpp
src/gui/: gui.cpp  gui.hpp  gui_image.cpp  gui_image.hpp  gui_widgets.cpp
src/gui/res/include/: image.h  logo.cpp
